RESOLVED FIXED 255408
Fix definition of WebPageProxy::viewWidget for WC
https://bugs.webkit.org/show_bug.cgi?id=255408
Summary Fix definition of WebPageProxy::viewWidget for WC
Don Olmstead
Reported 2023-04-13 11:19:03 PDT
...
Attachments
Don Olmstead
Comment 1 2023-04-13 11:30:43 PDT
EWS
Comment 2 2023-04-13 16:43:22 PDT
Committed 262935@main (5a7496bb3980): <https://commits.webkit.org/262935@main> Reviewed commits have been landed. Closing PR #12704 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-04-13 16:44:20 PDT
Note You need to log in before you can comment on or make changes to this bug.