Fix definition of WebPageProxy::viewWidget for WC https://bugs.webkit.org/show_bug.cgi?id=255408

Reviewed by Fujii Hironori.

The definition of `WebPageProxy::viewWidget` was returning a `HWND`
which is Windows specific. Make the definition for cases of
`USE(GRAPHICS_LAYER_TEXTURE_MAPPER)` or `USE(GRAPHICS_LAYER_WC)`.

* Source/WebKit/UIProcess/Inspector/win/WebInspectorUIProxyWin.cpp:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/win/WebContextMenuProxyWin.cpp:
* Source/WebKit/UIProcess/win/WebPageProxyWin.cpp:

Canonical link: https://commits.webkit.org/262935@main